# introspector

./: .gitmodules  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/boyz/introspector/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/arm64-v8a/: memread  scanmem
app/src/main/assets/armeabi-v7a/: memread  scanmem
app/src/main/assets/x86/: memread  scanmem
app/src/main/assets/x86_64/: memread  scanmem
app/src/main/cpp/: CMakeLists.txt  config.h  memread.c
app/src/main/java/com/boyz/introspector/: DecompilerService.kt  MainActivity.kt
app/src/main/java/com/boyz/introspector/data/model/: AttachedSession.kt  DemoValue.kt  InstalledApp.kt  MemoryAddress.kt
app/src/main/java/com/boyz/introspector/data/repository/: AppRepository.kt  DexParser.kt  MemoryRepository.kt  SourceRepository.kt
app/src/main/java/com/boyz/introspector/root/: RootManager.kt
app/src/main/java/com/boyz/introspector/ui/navigation/: NavGraph.kt
app/src/main/java/com/boyz/introspector/ui/screens/: AppDetailScreen.kt  CodeView.kt  ContentTree.kt  DemoScreen.kt  FindAllModal.kt  HomeScreen.kt  MemoryScreen.kt  SourceScreen.kt  SyntaxHighlight.kt
app/src/main/java/com/boyz/introspector/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/boyz/introspector/ui/viewmodel/: AppViewModel.kt  DemoViewModel.kt  SessionViewModel.kt  SourceViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/boyz/introspector/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
